@@ -1,5 +1,5 @@
 #!/bin/sh
-for dir; do
+for dir in $$*; do
     while rmdir "$dir" >/dev/null 2>&1 &&
           parent=`expr "$dir" : '\(.*\)/[^/][^/]*'`; do
         case "$parent" in
